# League_Comms

./: .gitignore  .npmrc  403_ERROR_ANALYSIS.md  AGGRESSIVE_TYPE_FIX.md  ALL_ENDPOINTS_TESTED_AND_WORKING.md  API_ENDPOINTS_VERIFICATION.md  API_KEY_VS_OAUTH_EXPLAINED.md  API_LOGIC_VERIFICATION.md  ARCHITECTURE.md  AUTO_ENV_SETUP.md  BATCH_PROCESSING_IMPLEMENTATION.md  BUILD_API_FIRST.md  BUILD_FIX_SIMPLE.md  BUILD_FROM_ANYWHERE.md  BUILD_ORDER_FIX.md  CHAMPIONS_DATA_ROOT_CAUSE.md  CHAMPIONS_IMPLEMENTATION_COMPLETE.md  CHAMPIONS_TIER_LIST_FIX.md  CHECK_BUILD_SUCCESS.md  CLONE_WITH_TOKEN.md  COMMIT_AND_PUSH_FIXES.md  COMMIT_RIOT_API_FIXES.md  COMPLETE_FIX.md  COMPLETE_PUSH.md  CONTACT_RIOT_SUPPORT_FOR_OAUTH.md  CORRECT_BUILD_COMMANDS.md  CORRECT_MIGRATE_COMMAND.md  CREATE_ENV_FILE.md  CREATE_ENV_NOW.md  DATABASE_SCALABILITY.md  DATA_FLOW_VERIFICATION.md  DEFINITIVE_FIX.md  DIAGNOSE_API_CONNECTION.md  DOCKER_PERMISSION_FIX.md  EASY_CLONE.md  EXACT_BUILD_COMMANDS.md  EXAMINE_API_PAGE_FOR_OAUTH.md  FINAL_API_TEST_REPORT.md  FINAL_BUILD_FIX.md  FINAL_OAUTH_SOLUTION.md  (+134 more)
apps/api/: ADD_TO_ENV.md  COMPLETE_FIX.md  FIX_DATABASE_SCHEMA.md  FIX_PRISMA_CLIENT.md  HOW_TO_USE_CHAMPIONS_API.md  QUICK_FIX_CHAMPIONS.md  RATE_LIMITING_CONFIG.md  package.json  (+9 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
infra/: docker-compose.yml
scripts/: check-build-data.sql  create-env.js  fix-column-names.sql  fix-postgres-url.js  fix-typescript-cache.ps1  fix-typescript-cache.sh  reset-migrations-for-postgres.ps1  reset-migrations-for-postgres.sh  test-riot-apis.js  update-db-to-postgres.js
(+82 files in other folders)
